--- a/finalproject.html
+++ b/finalproject.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
 
+<html>
+
+<head>
+
+<title></title>
+
+<link type=”text/css” rel=”stylesheet”
+href=”finalprojectstyle.css”>
+
+</head>
+
+<body>
+
+<header>
+</header>
+
+<nav>
+</nav>
+
+<main>
+
+<h1>Exploring Computer Science</h1>
+
+<p>This site is about an ethical dile</p>
+<p></p>
+<p></p>
+
+</main>
+
+</body>
+
+</html>
