--- a/finalproject.html
+++ b/finalproject.html
@@ -17,9 +17,10 @@ href=”finalprojectstyle.css”>
 </header>
 
 <nav>
-  <p>Home</p>
-  <p>About</p>
-  <p>Topic</p>
+  <ul class="topnav" id="mytopnav">
+    <li><a href="">Home</a><li>
+    <li><a href="">About</a></li>
+    <li><a href="">Topic</a></li>
 </nav>
 
 <main>
