--- a/finalproject.html
+++ b/finalproject.html
@@ -18,7 +18,7 @@ href=”finalprojectstyle.css”>
 
 <nav>
   <ul class="topnav" id="mytopnav">
-    <li><a href="">Home</a><li>
+    <li><a href="">Home</a></li>
     <li><a href="">About</a></li>
     <li><a href="">Topic</a></li>
   </ul>
