--- a/finalproject.html
+++ b/finalproject.html
@@ -7,7 +7,7 @@
 <title></title>
 
 <link type=”text/css” rel=”stylesheet”
-href=”finalprojectstyle.css”/>
+href=”finalproject/finalprojectstyle.css”/>
 
 </head>
 
