--- a/finalproject.html
+++ b/finalproject.html
@@ -6,8 +6,8 @@
 
 <title></title>
 
-<link type=”text/css” rel=”stylesheet”
-href= "finalprojectstyle.css"/>
+<link rel="stylesheet" type="text/css" 
+href= "finalprojectstyle.css" />
 
 </head>
 
