--- a/finalproject.html
+++ b/finalproject.html
@@ -28,7 +28,7 @@ href= "finalprojectstyle.css" />
 
 <h1>Exploring Computer Science</h1>
 
-<p>This site is about an ethical dile</p>
+<p class="home">This site is about an ethical dile</p>
 <p></p>
 <p></p>
 
