--- a/finalproject.html
+++ b/finalproject.html
@@ -18,9 +18,9 @@ href= "finalprojectstyle.css" />
 
 <nav>
   <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
-    <li><a href="">Topic</a></li>
+    <li><a href="index1.html">Home</a></li>
+    <li><a href="index2.html">About</a></li>
+    <li><a href="index3.html">Topic</a></li>
   </ul>
 </nav>
 
@@ -28,7 +28,13 @@ href= "finalprojectstyle.css" />
 
 <h1>Exploring Computer Science</h1>
 
-<p class="home">This site is about an ethical dile</p>
+<p class="home">The course that I am taking, allowing me to gain more knowledge about computers, is called (perhaps obvious)
+  Exploring Computer Science within Covina High School. In this class, I have excelled my knowlege with how computers work, the
+  components that make them work, how they read information. With that, I know I will be able to be more informed about this 
+  form of advancement in technology throughout the rest of the my senior year in high school. I decided to join this class 
+  because I thought it would be interesting to leanr something different aside from typical things that schools would have to 
+  offer such as art or math and such. The things I expected to get out of this class was a better handling of computers and how 
+  to be able to fix them if an issue were to ever occur with them.</p>
 <p></p>
 <p></p>
 
