--- a/finalproject.html
+++ b/finalproject.html
@@ -18,9 +18,9 @@ href= "finalprojectstyle.css" />
 
 <nav>
   <ul>
-    <li><a href="index1.html">Home</a></li>
-    <li><a href="index2.html">About</a></li>
-    <li><a href="index3.html">Topic</a></li>
+    <li><a href="finalproject.html">Home</a></li>
+    <li><a href="index1.html">About</a></li>
+    <li><a href="index2.html">Topic</a></li>
   </ul>
 </nav>
 
