--- a/finalproject.html
+++ b/finalproject.html
@@ -23,7 +23,9 @@ href= "finalprojectstyle.css" />
     <li><a href="index2.html">Topic</a></li>
   </ul>
 </nav>
-
+  
+<img class="imagesidebar" src="youngboyfetus.jpg">
+  
 <main>
 
 <h1>Exploring Computer Science</h1>
@@ -35,11 +37,13 @@ href= "finalprojectstyle.css" />
   because I thought it would be interesting to leanr something different aside from typical things that schools would have to 
   offer such as art or math and such. The things I expected to get out of this class was a better handling of computers and how 
   to be able to fix them if an issue were to ever occur with them.</p>
-<p></p>
-<p></p>
 
 </main>
 
+<aside>
+  <h2>YoungBoyFetus</h2>
+  <p>The young lad [above/below] is who introduced me to this class. He currently is enrolled in the class and is helping me with
+    any confusion I may have.</aside> 
 </body>
 
 </html>
