--- a/finalproject.html
+++ b/finalproject.html
@@ -42,7 +42,7 @@ href= "finalprojectstyle.css" />
 
 <aside>
   <h2>YoungBoyFetus</h2>
-  <p>The young lad [above/below] is who introduced me to this class. He currently is enrolled in the class and is helping me with
+  <p class="aside">The young lad [above/below] is who introduced me to this class. He currently is enrolled in the class and is helping me with
     any confusion I may have.</aside> 
 </body>
 
