--- a/finalproject.html
+++ b/finalproject.html
@@ -28,8 +28,10 @@ href= "finalprojectstyle.css" />
   <h2>YoungBoyFetus</h2>
   <p class="aside">The young lad [above/below] is who introduced me to this class. He currently is enrolled in the class and is helping me with
     any confusion I may have.</aside> 
-  
+
+<div>  
  <img class="imagesidebar" src="youngboyfetus.jpg">
+</div>
   
 <main>
 
