--- a/finalproject.html
+++ b/finalproject.html
@@ -24,10 +24,11 @@ href= "finalprojectstyle.css" />
   </ul>
 </nav>
   
-<aside>
+<main>
   <h2>YoungBoyFetus</h2>
   <p class="aside">The young lad [above/below] is who introduced me to this class. He currently is enrolled in the class and is helping me with
-    any confusion I may have.</aside> 
+    any confusion I may have.
+ </main> 
 
 <div>  
  <img class="imagesidebar" src="youngboyfetus.jpg">
