--- a/finalproject.html
+++ b/finalproject.html
@@ -40,8 +40,8 @@ href= "finalprojectstyle.css" />
   
 <main>
   <h2>YoungBoyFetus</h2>
-  <p class="aside">The young lad [above/below] is who introduced me to this class. He currently is enrolled in the class and is helping me with
-    any confusion I may have.
+  <p class="aside">The young lad [above/below] is who introduced me to this class. He currently is enrolled in the class and is
+    helping me with any confusion I may have. </p>
  </main> 
   
 <div>  
