--- a/finalproject.html
+++ b/finalproject.html
@@ -45,7 +45,7 @@ href= "finalprojectstyle.css" />
  </main> 
   
 <div>  
- <img class="imagesidebar" src="youngboyfetus.jpg" alt="youngboyfetus">
+ <img class="imagesidebar" src="youngboyfetus.png" alt="youngboyfetus">
 </div>
   
 </body>
