--- a/finalproject.html
+++ b/finalproject.html
@@ -16,7 +16,7 @@ href= "finalprojectstyle.css" />
 <header>
 </header>
 
-<nav>
+<nav class="active">
   <ul>
     <li><a href="finalproject.html">Home</a></li>
     <li><a href="index1.html">About</a></li>
