--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title></title>
+<title>World Issue</title>
 
 <link rel="stylesheet" type="text/css" 
 href= "index1style.css" />
@@ -26,14 +26,26 @@ href= "index1style.css" />
   
 <main>
 
-<h1>Topic</h1>
+<h1>Suicidal Tendencies</h1>
+<h2>And the Statistics</h2>
 
-<p class="topic"></p>
+<p class="topic">No, I am not referring to the band. Suicide has been an epidemic for the longest time and is continuously occuring. 
+  The rate of suicides is higher than homicides. Comparing the murder rate to suicidal rate, it is a ratio of 6 per 100,00 and 10.8 per 
+  100,000. In the US, suicide is the 10th leading cause of death and happens every 13 minutes. In the world, every 40 seconds, someone 
+  takes their life. By the 24 hour mark, about an average 111 people on earth have committed suicide. It is definitely not something to
+  be taken lightly. Suicidal thoughts occur more often than they should. For every 10 people who attempt to commit suicide, 1 person 
+  actually succeeds. Suicide mostly occurs due to mental or emotional disorder, which is 90% of the time. Within that, it is usually 
+  depression that causes this. Substance abuse also takes a crucial part within this issue. People who take their own life mostly occur
+  within the white race, the next being American Indian. The highest amount of deaths from suicide (in 2016) is in Montana with a ratio 
+  of 24.3 per 100,00 suicides. New York had the least with a ratio of 8.4 per 100,000. In all honesty, I did not really know that there 
+  is money involved when someone takes their life. unless this does involve funeral arrangements and such. Within my research, I found 
+  that suicide costs society over $44.6 billion a year. This is a combination of medical and work loss costs. California ranks the 43rd
+  state to commit suicide. </p>
 
 </main>
   
 <main>
-  <h2>YoungBoyFetus</h2>
+  <h2></h2>
   <p class="aside"></p>
  </main> 
   
