--- a/index2.html
+++ b/index2.html
@@ -44,10 +44,10 @@ href= "index2style.css" />
 
 </main>
   
-<main>
-  <h2></h2>
-  <p class="aside"></p>
- </main> 
+<aside>
+  <h2>Why Did I Pick This Issue?</h2>
+  <p class="aside">On August 26, 2017, around 9:20 pm, I was in my bed, covered in my blankets ready to sleep. </p>
+ </aside> 
   
 </body>
 
