--- a/finalproject.html
+++ b/finalproject.html
@@ -28,7 +28,7 @@ href= "finalprojectstyle.css" />
 
 <h1>Exploring Computer Science</h1>
 
-<p class="home">The course that I am taking, allowing me to gain more knowledge about computers, is called (perhaps obvious)
+<p class="main">The course that I am taking, allowing me to gain more knowledge about computers, is called (perhaps obvious)
   Exploring Computer Science within Covina High School. In this class, I have excelled my knowlege with how computers work, the
   components that make them work, how they read information. With that, I know I will be able to be more informed about this 
   form of advancement in technology throughout the rest of the my senior year in high school. I decided to join this class 
