--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@ href= "index2style.css" />
 <h1>Suicidal Tendencies</h1>
 <h4>And the Statistics</h4>
 
-<p class="topic">No, I am not referring to the band. Suicide has been an epidemic for the longest time and is continuously occuring. 
+<p class="main">No, I am not referring to the band. Suicide has been an epidemic for the longest time and is continuously occuring. 
   The rate of suicides is higher than homicides. Comparing the murder rate to suicidal rate, it is a ratio of 6 per 100,00 and 10.8 per 
   100,000. In the US, suicide is the 10th leading cause of death and happens every 13 minutes. In the world, every 40 seconds, someone 
   takes their life. By the 24 hour mark, about an average 111 people on earth have committed suicide. It is definitely not something to
