--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,26 @@ href= "index2style.css" />
   
 <aside>
   <h2>Why Did I Pick This Issue?</h2>
-  <p class="aside">On August 26, 2017, around 9:20 pm, I was in my bed, covered in my blankets ready to sleep. </p>
+  <p class="aside">On August 26, 2017, around 9:20 pm, I was in my bed, covered in my blankets ready to sleep. My mother was in the 
+    living room on the phone with my father (he was still at work, or at least on his way home from it). I hear a knock at the door and 
+    then the sound of my mom's footstpes heading towards the door. I assumed it was my dad, so I continued trying to sleep. Oddly, I 
+    didn't hear my dad's usual footsteps entering the door. My mom walks to my room and tells me my friend is at the door. My friend had 
+    apparently told her that it was an emergency. The first thing I thought was that she ran away from her house. She usually had family 
+    problems at that time. I quickly walk to the door and open it to find her and a young man behind her standing on my porch, and her
+    mom stopped in front of my house. I crossed out the "runaway child" from my mind. I asked her what's wrong. Then the unforgettable 
+    and shcoking words came out of her quivering lips, "Bubbles is dead." I took a few seconds to process that. She called a good friend
+    of ours, Nathan, Bubbles. It was his nickname. With disbelief, I looked at her and the stranger stadning near her. I thought to 
+    myself <em>"How could this have happened? Did someone hurt him? Was it some sort of tragic accident?"</em>She told me that he killed 
+    himself the night before. All of a sudden, my head was spinning. Within 2 minutes, everything seemed to become overwhelming. My mom
+    came to the door asking what happened, in a stern tone. Turning to me for an answer, she saw the depression sinking in my face, and in
+    a more comforting voice, asked me what was wrong. My friend answered for me, because I wasn;t able to bring myself to say those words.
+    Eventually my dad came home, about 5 minutes after they arrived. My dad asked for my friend, the guy with her, and her mom to come 
+    inside. Inside my house, there was a more in-depth explanation of how it happened. The guy with my friend is friends of my friend as 
+    well as Nathan's. His name is Robbie. He told my parents and I that on the 25th, he was FaceTiming his girlfriend around 7 pm. Robbie's
+    girlfriend mentioned that they were speaking, but Nathan was messing with a belt. Next thing she knew, he had turned the camera 
+    around, so she couldn't see anything. She thought it was a trick and hung up. An hour later after no response, she tried contacting him, 
+    but there was no answer. The next morning... Nathan's brother found him in the closet with a belt around his neck. He also had overdosed
+    on ecstasy. No one saw it coming. No one. </p>
  </aside> 
   
 </body>
