--- a/index2.html
+++ b/index2.html
@@ -55,7 +55,7 @@ href= "index2style.css" />
     mom stopped in front of my house. I crossed out the "runaway child" from my mind. I asked her what's wrong. Then the unforgettable 
     and shcoking words came out of her quivering lips, "Bubbles is dead." I took a few seconds to process that. She called a good friend
     of ours, Nathan, Bubbles. It was his nickname. With disbelief, I looked at her and the stranger stadning near her. I thought to 
-    myself <em>"How could this have happened? Did someone hurt him? Was it some sort of tragic accident?"</em>She told me that he killed 
+    myself <em>"How could this have happened? Did someone hurt him? Was it some sort of tragic accident?"</em> She told me that he killed 
     himself the night before. All of a sudden, my head was spinning. Within 2 minutes, everything seemed to become overwhelming. My mom
     came to the door asking what happened, in a stern tone. Turning to me for an answer, she saw the depression sinking in my face, and in
     a more comforting voice, asked me what was wrong. My friend answered for me, because I wasn;t able to bring myself to say those words.
@@ -65,7 +65,11 @@ href= "index2style.css" />
     girlfriend mentioned that they were speaking, but Nathan was messing with a belt. Next thing she knew, he had turned the camera 
     around, so she couldn't see anything. She thought it was a trick and hung up. An hour later after no response, she tried contacting him, 
     but there was no answer. The next morning... Nathan's brother found him in the closet with a belt around his neck. He also had overdosed
-    on ecstasy. No one saw it coming. No one. </p>
+    on ecstasy. No one saw it coming. No one. I had heard of his struggles before, but he told me that he had his reasons to fight in this 
+    life; me and my friend being one of them. It was so difficult to overcome. I use to tell him everything. We would even stay up to the 
+    small hours texting each other. We always talked about the deepest things about life. I even remember that I told him I hated the 
+    word hope, because it felt so useless and brought so much pain. So he told me, "Well then **** hope and let's call it Nathan so I can make 
+    this world a better place for people in this world." </p>
  </aside> 
   
 </body>
