--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,11 @@ href= "index2style.css" />
     life; me and my friend being one of them. It was so difficult to overcome. I use to tell him everything. We would even stay up to the 
     small hours texting each other. We always talked about the deepest things about life. I even remember that I told him I hated the 
     word hope, because it felt so useless and brought so much pain. So he told me, "Well then **** hope and let's call it Nathan so I can make 
-    this world a better place for people in this world." </p>
+    this world a better place for people in this world." Everyday I miss him. Sometimes other days more than others. But I always remember 
+    him. Even listening to a song that I can relate to will have me either in a blurry sight or just a complete saltwater discharge. I just 
+    wished that there was something I could have done to help him, so he can know that so many people that loved him would be so affected
+    if he ever hurt himself. I just 'Nathan' that his pain is finally gone, and that he is looking after me and those who loved him, and 
+    that I will be able to see him again.</p>
  </aside> 
   
 </body>
