--- a/finalproject.html
+++ b/finalproject.html
@@ -42,7 +42,7 @@ href= "finalprojectstyle.css" />
   <h2>YoungBoyFetus</h2>
   <p class="aside">The young lad [above/below] is who introduced me to this class. He currently is enrolled in the class and is
     helping me with any confusion I may have. </p>
- </main> 
+ </aside> 
   
 <div>  
  <img class="imagecenter" src="youngboyfetus.jpg" alt="youngboyfetus">
