--- a/finalproject.html
+++ b/finalproject.html
@@ -48,6 +48,12 @@ href= "finalprojectstyle.css" />
  <img class="imagecenter" src="youngboyfetus.jpg" alt="youngboyfetus">
 </div>
   
+<footer>
+  <p>Posted by: Hege Refsnes</p>
+  <p>Contact information: <a href="mailto:someone@example.com">
+  someone@example.com</a>.</p>
+</footer>  
+  
 </body>
 
 </html>
