--- a/finalproject.html
+++ b/finalproject.html
@@ -40,7 +40,7 @@ href= "finalprojectstyle.css" />
   
 <aside>
   <h2>YoungBoyFetus</h2>
-  <p class="aside">This young lad, who's name is Andrew, is the one who introduced me to this class. He currently is enrolled in the class and is
+  <p>This young lad, who's name is Andrew, is the one who introduced me to this class. He currently is enrolled in the class and is
     helping me with any confusion I may have. I met him my junior year in high school (2015-16) in my English class. He also was in 
     my Spanish class. The way we actually became friends is thorugh a friend of ours, if he would prefer to call her that I suppose. 
     It's a long story... sort of. Anyways, from there on, we would talk and things of that nature. When senior year came, we had no 
