--- a/index2.html
+++ b/index2.html
@@ -68,7 +68,7 @@ href= "index2style.css" />
     on ecstasy. No one saw it coming. No one. I had heard of his struggles before, but he told me that he had his reasons to fight in this 
     life; me and my friend being one of them. It was so difficult to overcome. I use to tell him everything. We would even stay up to the 
     small hours texting each other. We always talked about the deepest things about life. I even remember that I told him I hated the 
-    word hope, because it felt so useless and brought so much pain. So he told me, "Well then **** hope and let's call it Nathan so I can make 
+    word hope, because it felt so useless and brought so much pain. So he told me, "Well then f*** hope and let's call it Nathan so I can make 
     this world a better place for people in this world." Everyday I miss him. Sometimes other days more than others. But I always remember 
     him. Even listening to a song that I can relate to will have me either in a blurry sight or just a complete saltwater discharge. I just 
     wished that there was something I could have done to help him, so he can know that so many people that loved him would be so affected
