--- a/finalproject.html
+++ b/finalproject.html
@@ -57,7 +57,7 @@ href= "finalprojectstyle.css" />
   
 <footer>
   <p>Posted by: Natalie Jimenez</p>
-  <p>&entity_Jimenez Copyright Text </p></footer>  
+  <p>&copy;Jimenez Copyright Text </p></footer>  
   
 </body>
 
