--- a/finalproject.html
+++ b/finalproject.html
@@ -18,9 +18,9 @@ href= "finalprojectstyle.css" />
 
 <nav class="active">
   <ul>
-    <li><a href="finalproject.html">Home</a></li>
-    <li><a href="index1.html">About</a></li>
-    <li><a href="index2.html">Topic</a></li>
+    <li class="active"><a href="finalproject.html">Home</a></li>
+    <li class="active"><a href="index1.html">About</a></li>
+    <li class="active"><a href="index2.html">Topic</a></li>
   </ul>
 </nav>
   
