--- a/finalproject.html
+++ b/finalproject.html
@@ -16,11 +16,11 @@ href= "finalprojectstyle.css" />
 <header>
 </header>
 
-<nav class="active">
+<nav>
   <ul>
     <li class="active"><a href="finalproject.html">Home</a></li>
-    <li class="active"><a href="index1.html">About</a></li>
-    <li class="active"><a href="index2.html">Topic</a></li>
+    <li><a href="index1.html">About</a></li>
+    <li><a href="index2.html">Topic</a></li>
   </ul>
 </nav>
   
