--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@ href= "index2style.css" />
   <ul>
     <li><a href="finalproject.html">Home</a></li>
     <li><a href="index1.html">About</a></li>
-    <li><a href="index2.html">Topic</a></li>
+    <li class="active"><a href="index2.html">Topic</a></li>
   </ul>
 </nav>
   
