--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@ href= "index1style.css" />
 <nav>
   <ul>
     <li><a href="finalproject.html">Home</a></li>
-    <li><a href="index1.html">About</a></li>
+    <li class="active"><a href="index1.html">About</a></li>
     <li><a href="index2.html">Topic</a></li>
   </ul>
 </nav>
@@ -36,6 +36,10 @@ href= "index1style.css" />
   <h2>YoungBoyFetus</h2>
   <p class="aside"></p>
  </main> 
+  
+  <footer>
+    <p></p>
+  </footer>
   
 </body>
 
