--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,8 @@ href= "index1style.css" />
  </main> 
   
   <footer>
-    <p></p>
+    <p>Posted by: Natalie Jimenez</p>
+    <p>&copy;Jimenez Copyright Text</p>
   </footer>
   
 </body>
