--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,21 @@ href= "index2style.css" />
   state to commit suicide. A lot of people do not see how serious this issue is. People are taking their lives everyday for all these
   different reasons. Something that should not happen in the youth, middle-aged, nor elderly. The highest suicide rate is among adults 
   between the age of 45 to 64, at a 19.6%. The second highest rate are those of 85 years or older with a percentage of 19.4. Young adults 
-  and adolescents (15 to 24) have a lower suicide rate with 12.5%.</p>
+  and adolescents (15 to 24) have a lower suicide rate with 12.5%. What is America doing to help exactly? Gregg Zoroya from USA Today
+  points out "The Centers for Disease Control and Prevention promotes several "winnable" priorities, among them motor vehicle injuries 
+  and HIV. Suicide, though more costly in lives than either of those categories, is not on the list" in his article "40,000 Suicides
+  Annually , Yet America Simply Shrugs". Usually when a person watches television or they are on their phone, computer, tablet, etc. 
+  and there are advertisements, a majority of the time it speaks about finding cures for cancer, feeding the needy, adopting pets,
+  helping the disabled and even drug or alcohol abuse. Hardly is there ever an awareness towards suicide, though it happens everyday.
+  Everyone knows about it and how much of an impact it takes on those close to the victim. It's not something anyone should accept if 
+  it can be prevented. There are people that can help with counseling and fighting these impulses that some cannot seem to overcome,
+  especially not alone. What does it take for people to actually start finding options to help out the many people who feel like they 
+  are suffering from their own lives or from their mental illness? How about knowing that when someone dies by their own hands, part
+  of their payments come out of their pockets? What about the pain and grief people face after hearing that their loved one has passed as 
+  fatally as they did? Or maybe they have to go through it themselves just to know the feeling and how serious it actually is? It seems 
+  to me through all my research, that despite how frequently someone takes thier own life, it is underestimated. Somehow, someone needs
+  to create awareness of an epidemic that happens all over the globe, work to prevent the negative urges, and be able to allow everyone to
+  live a full life as best as they can. My start is here. Where is <em>yours</em>?</p>
 
 </main>
   
