--- a/index2.html
+++ b/index2.html
@@ -57,12 +57,17 @@ href= "index2style.css" />
   fatally as they did? Or maybe they have to go through it themselves just to know the feeling and how serious it actually is? It seems 
   to me through all my research, that despite how frequently someone takes thier own life, it is underestimated. Somehow, someone needs
   to create awareness of an epidemic that happens all over the globe, work to prevent the negative urges, and be able to allow everyone to
-  live a full life as best as they can. My start is here. Where is <em>yours</em>?</p>
+  live a full life as best as they can. My start is here. <em>Where is yours?</em></p>
 
 </main>
   
+<main>
+  <h1>Why Did I Choose This Issue?</h1>
+  <p></p>
+</main>
+  
 <aside>
-  <h2>Why Did I Pick This Issue?</h2>
+  <h2>My Story</h2>
   <p class="aside">On August 26, 2017, around 9:20 pm, I was in my bed, covered in my blankets ready to sleep. My mother was in the 
     living room on the phone with my father (he was still at work, or at least on his way home from it). I hear a knock at the door and 
     then the sound of my mom's footstpes heading towards the door. I assumed it was my dad, so I continued trying to sleep. Oddly, I 
