--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,18 @@ href= "index2style.css" />
   
 <main>
   <h1>Why Did I Choose This Issue?</h1>
-  <p></p>
+  <p>I chose this issue because over the course of my high school years, I have came across more than one too many people who have 
+  thought, attempted or committed suicice. I never paid much attention to this problem until I found myself close to such a situation.
+  I was able to help some people who felt this way and pulled them away from such a tragedy. Having to do something like that, especially on
+  so many accounts, is still so unbelievable to me. To also think that things like this go on throughtout the whole world. Only the fortunate 
+  were able to be talked out of it, but some are not so lucky. Some may say they are lucky because the pain in their life was so dreadul and
+  unbearable that taking their own life was them saving themselves. After coming into contact with people that found themselves having the 
+  weight of the world on their shoulders, it all became so opened to me of how big of a deal suicide and depression is. One friend of mine, for 
+  I know, is still struggling with it. Most have been able to overcome it, or they end up going back to that dark place, but are at least
+  able to come out of it time and time again. Only one friend of mine had actually went through with his attempts, and even then, no one 
+  knew he felt the way he did. Some had at least recollection that he use to feel that way, me being one of them. Not many people notice
+  how much of an impact suicide can be, not even I did until it hit me closer than it should hit anyone. So I want society to be aware of 
+  self-harm so we can help put a stop to it and allow everyone to live their life to its fullest potential. </p>
 </main>
   
 <aside>
