--- a/index2.html
+++ b/index2.html
@@ -110,7 +110,7 @@ href= "index2style.css" />
  </aside> 
   
   <aside class="right">
-    <blockquote class="indentedverse">
+    <blockquote>
     <h3>The Blackening</h3>
       <p><cite>Natlie Jimenez</cite></p>
       <pre>
