--- a/index2.html
+++ b/index2.html
@@ -111,7 +111,7 @@ href= "index2style.css" />
   
   <aside class="right">
     <h3>The Blackening</h3>
-      <p><cite>Natlie Jimenez</cite></p>
+      <p><cite>Natalie Jimenez</cite></p>
     <p class="aside">This is a poem that my friend's death inspired me to make a very short time after his passing in my English class.</p>
     <p>The day was calm, the the night- a storm</p>
     <p>The wind blew, the rain fell</p>
