--- a/index2.html
+++ b/index2.html
@@ -113,30 +113,30 @@ href= "index2style.css" />
     <h3>The Blackening</h3>
       <p><cite>Natalie Jimenez</cite></p>
     <p class="aside">This is a poem that my friend's death inspired me to make a very short time after his passing in my English class.</p>
-    <p>The day was calm, the the night- a storm</p>
-    <p>The wind blew, the rain fell</p>
-    <p>It poured all night, until morning came</p>
-    <p>Yet the day was darker than last night</p>
-    <p>During that time, the world became forever altered</p>
+    <p class="itlaic">The day was calm, the the night- a storm</p>
+    <p class="itlaic">The wind blew, the rain fell</p>
+    <p class="itlaic">It poured all night, until morning came</p>
+    <p class="itlaic">Yet the day was darker than last night</p>
+    <p class="itlaic">During that time, the world became forever altered</p>
     <br>
-    <p>For there no longer was the sun</p>
-    <p>For there no longer were the stars</p>
-    <p>For there no longer was the moon</p>
-    <p>For there was darkness all around</p>
+    <p class="itlaic">For there no longer was the sun</p>
+    <p class="itlaic">For there no longer were the stars</p>
+    <p class="itlaic">For there no longer was the moon</p>
+    <p class="itlaic">For there was darkness all around</p>
     <br>
-    <p>The thunder pounded by the second without light</p>
-    <p>It began to rain hard</p>
-    <p>So hard that it drowned the world</p>
-    <p>An absence of hope for the light to shine</p>
-    <p>There seemed to be nothing left</p>
+    <p class="itlaic">The thunder pounded by the second without light</p>
+    <p class="itlaic">It began to rain hard</p>
+    <p class="itlaic">So hard that it drowned the world</p>
+    <p class="itlaic">An absence of hope for the light to shine</p>
+    <p class="itlaic">There seemed to be nothing left</p>
     <br>
-    <p>Nothing left but the dark</p>
-    <p>Nothing left but the rain</p>
-    <p>Nothing left but the thunder</p>
-    <p>Everyting left but the light</p>
+    <p class="itlaic">Nothing left but the dark</p>
+    <p class="itlaic">Nothing left but the rain</p>
+    <p class="itlaic">Nothing left but the thunder</p>
+    <p class="itlaic">Everyting left but the light</p>
     <br>
-    <p>The world remained in darkness</p>
-    <p>The world remained forever altered</p>
+    <p class="itlaic">The world remained in darkness</p>
+    <p class="itlaic">The world remained forever altered</p>
   </aside>
 
   <footer>
