--- a/index2.html
+++ b/index2.html
@@ -113,30 +113,30 @@ href= "index2style.css" />
     <h3>The Blackening</h3>
       <p><cite>Natalie Jimenez</cite></p>
     <p class="aside">This is a poem that my friend's death inspired me to make a very short time after his passing in my English class.</p>
-    <p class="itlaic">The day was calm, the the night- a storm</p>
-    <p class="itlaic">The wind blew, the rain fell</p>
-    <p class="itlaic">It poured all night, until morning came</p>
-    <p class="itlaic">Yet the day was darker than last night</p>
-    <p class="itlaic">During that time, the world became forever altered</p>
+    <p><em>The day was calm, the the night- a storm</em></p>
+    <p><em>The wind blew, the rain fell</em></p>
+    <p><em>It poured all night, until morning came</em></p>
+    <p><em>Yet the day was darker than last night</em></p>
+    <p><em>During that time, the world became forever altered</em></p>
     <br>
-    <p class="itlaic">For there no longer was the sun</p>
-    <p class="itlaic">For there no longer were the stars</p>
-    <p class="itlaic">For there no longer was the moon</p>
-    <p class="itlaic">For there was darkness all around</p>
+    <p><em>For there no longer was the sun</em></p>
+    <p><em>For there no longer were the stars</em></p>
+    <p><em>For there no longer was the moon</em></p>
+    <p><em>For there was darkness all around</em></p>
     <br>
-    <p class="itlaic">The thunder pounded by the second without light</p>
-    <p class="itlaic">It began to rain hard</p>
-    <p class="itlaic">So hard that it drowned the world</p>
-    <p class="itlaic">An absence of hope for the light to shine</p>
-    <p class="itlaic">There seemed to be nothing left</p>
+    <p><em>The thunder pounded by the second without light</em></p>
+    <p><em>It began to rain hard</em></p>
+    <p><em>So hard that it drowned the world</em></p>
+    <p><em>An absence of hope for the light to shine</em></p>
+    <p><em>There seemed to be nothing left</em></p>
     <br>
-    <p class="itlaic">Nothing left but the dark</p>
-    <p class="itlaic">Nothing left but the rain</p>
-    <p class="itlaic">Nothing left but the thunder</p>
-    <p class="itlaic">Everyting left but the light</p>
+    <p><em>Nothing left but the dark</em></p>
+    <p><em>Nothing left but the rain</em></p>
+    <p><em>Nothing left but the thunder</em></p>
+    <p><em>Everyting left but the light</em></p>
     <br>
-    <p class="itlaic">The world remained in darkness</p>
-    <p class="itlaic">The world remained forever altered</p>
+    <p><em>The world remained in darkness</em></p>
+    <p><em>The world remained forever altered</em></p>
   </aside>
 
   <footer>
