--- a/index2.html
+++ b/index2.html
@@ -79,7 +79,7 @@ href= "index2style.css" />
   
 <aside>
   <h2>My Story</h2>
-  <p class="aside">On August 26, 2017, around 9:20 pm, I was in my bed, covered in my blankets ready to sleep. My mother was in the 
+  <p class="white">On August 26, 2017, around 9:20 pm, I was in my bed, covered in my blankets ready to sleep. My mother was in the 
     living room on the phone with my father (he was still at work, or at least on his way home from it). I hear a knock at the door and 
     then the sound of my mom's footstpes heading towards the door. I assumed it was my dad, so I continued trying to sleep. Oddly, I 
     didn't hear my dad's usual footsteps entering the door. My mom walks to my room and tells me my friend is at the door. My friend had 
