--- a/index2.html
+++ b/index2.html
@@ -139,6 +139,8 @@ href= "index2style.css" />
     <p><em>The world remained in darkness</em></p>
     <p><em>The world remained forever altered</em></p>
   </aside>
+  
+  <img class="image" src="nathan.jpg" alt="nathan Gonzalves">
 
   <footer>
     <p class="footer">Posted by: Natalie Jimenez</p>
