--- a/finalproject.html
+++ b/finalproject.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title></title>
+<title>Computer Science</title>
 
 <link rel="stylesheet" type="text/css" 
 href= "finalprojectstyle.css" />
