--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title></title>
+<title>About</title>
 
 <link rel="stylesheet" type="text/css" 
 href= "index1style.css" />
@@ -26,7 +26,7 @@ href= "index1style.css" />
   
 <main>
 
-<h1>About</h1>
+<h1>About Me</h1>
 
 <p class="about"></p>
 
