--- a/index1.html
+++ b/index1.html
@@ -28,8 +28,34 @@ href= "index1style.css" />
 
 <h1>About Me</h1>
 
-<p class="about"></p>
-
+<p class="about">A senior in high school and still find myself to be struggling with my usage of my time. I tend to procrastinate on 
+  many things, but when it comes time to complete them, I try to complete it in a decent quality. 
+  I can be very friendly, respectful, and sociable, as long as I am treated in the same fashion. My favorite drink is orange soda and 
+  I have strong passion for Hot Cheetos as my snack. For food, I would have to say spaghetti. Mmm, spaghetti. I love The Outsiders by
+  <cite>S.E. Hinton</cite>. I read the book 11 times and watched the movie, like, 9. </p>
+  
+  <h1>Favorite:</h1>
+  <h2>Color</h2>
+  <p class="about">Black</p>
+  <h2>Animal</h2>
+  <p class="about">Penguin- Not only are they cute and cuddley, but they also happen to be very persistent with strong instincts. 
+    They also nurute their young, which is their priority.</p>
+  <h2>Music</h2>
+  <p class="about">The type of music I listen to is hard rock, metal, and 2000s R%B. Any other form of mainstream has to be mostly before
+  2013. I am not a fan of today's music. No creativity or meaning.</p>
+  <h2>Drink</h2>
+  <p class="about">Orange Soda</p>
+  <h2>Snack</h2>
+  <p class="about"> I have strong passion for Hot Cheetos.</p>
+  <h2>Food</h2>
+  <p class="about">Spaghetti. Mmm, spaghetti.</p>
+  <h2>Book</h2>
+  <p class="about"> I love <em>The Outsiders</em> by <cite>S.E. Hinton</cite>. I read the book 11 times and watched the movie, like, 9.
+  </p>
+  <h2>Movie</h2>
+  <p class="about">Having to pick a movie that I can say I will never get tired of is difficult. I guess I would say, yeah, <em>The 
+    Outsiders</em>.</p>
+  
 </main>
   
 <main>
