--- a/index1.html
+++ b/index1.html
@@ -29,10 +29,12 @@ href= "index1style.css" />
 <h1>About Me</h1>
 
 <p class="about">A senior in high school and still find myself to be struggling with my usage of my time. I tend to procrastinate on 
-  many things, but when it comes time to complete them, I try to complete it in a decent quality. 
-  I can be very friendly, respectful, and sociable, as long as I am treated in the same fashion. My favorite drink is orange soda and 
-  I have strong passion for Hot Cheetos as my snack. For food, I would have to say spaghetti. Mmm, spaghetti. I love The Outsiders by
-  <cite>S.E. Hinton</cite>. I read the book 11 times and watched the movie, like, 9. </p>
+  many things, but when it comes time to complete them, I try to complete it in a decent quality. I can be very friendly, respectful,
+  and sociable, as long as I am treated in the same fashion. </p>
+
+  </main>
+  
+  <aside>
   
   <h1>Favorite:</h1>
   <h2>Color</h2>
@@ -56,12 +58,8 @@ href= "index1style.css" />
   <p class="about">Having to pick a movie that I can say I will never get tired of is difficult. I guess I would say, yeah, <em>The 
     Outsiders</em>.</p>
   
-</main>
+</aside>
   
-<main>
-  <h2>YoungBoyFetus</h2>
-  <p class="aside"></p>
- </main> 
   
   <footer>
     <p>Posted by: Natalie Jimenez</p>
