--- a/index1.html
+++ b/index1.html
@@ -60,6 +60,20 @@ href= "index1style.css" />
   
 </aside>
   
+  <img class="" src="ricardo.PNG" alt="Ricardo">
+  <img class="" src="paola.jpg" alt="Paola">
+  <img class="" src="priscila.jpg" alt="Priscilla">
+  <img class="" src="marco.JPG" alt="Marco">
+  <img class="" src="mm.PNG" alt="Mayra and Marco">
+  <img class="" src="jorge.jpg" alt="Jorge">
+  <img class="" src="asl.jpg" alt="ASL Class">
+  <img class="" src="ffa.JPG" alt="FFA">
+  <img class="" src="giomaria.jpg" alt="Gio and Maria">
+  <img class="" src="ae.png" alt="Abby and Esther">
+  <img class="" src="sarah.jpg" alt="Sarah">
+  <img class="" src="estherjpg" alt="Esther">
+  <img class="" src="quince.PNG" alt="Quince">
+  <img class="" src="4thgrade.png" alt="4th Grade">
   
   <footer>
     <p>Posted by: Natalie Jimenez</p>
