--- a/index1.html
+++ b/index1.html
@@ -59,7 +59,8 @@ href= "index1style.css" />
     Outsiders</em>.</p>
   
 </aside>
-  
+ 
+<div>
   <img class="" src="ricardo.PNG" alt="Ricardo">
   <img class="" src="paola.jpg" alt="Paola">
   <img class="" src="priscila.jpg" alt="Priscilla">
@@ -74,6 +75,7 @@ href= "index1style.css" />
   <img class="" src="estherjpg" alt="Esther">
   <img class="" src="quince.PNG" alt="Quince">
   <img class="" src="4thgrade.png" alt="4th Grade">
+</div>  
   
   <footer>
     <p>Posted by: Natalie Jimenez</p>
