--- a/index1.html
+++ b/index1.html
@@ -63,11 +63,11 @@ href= "index1style.css" />
 <div>
   <img class="" src="webpage/ricardo.PNG" alt="Ricardo">
   <img class="" src="webpage/paola.jpg" alt="Paola">
-  <img class="" src="webpage/priscila.jpg" alt="Priscilla">
+  <img class="" src="webpage/priscilla.jpg" alt="Priscilla">
   <img class="" src="webpage/marco.JPG" alt="Marco">
   <img class="" src="webpage/mm.PNG" alt="Mayra and Marco">
   <img class="" src="webpage/jorge.jpg" alt="Jorge">
-  <img class="" src="webpage/asl.jpg" alt="ASL Class">
+  <img class="" src="webpage/ASL.jpg" alt="ASL Class">
   <img class="" src="webpage/ffa.JPG" alt="FFA">
   <img class="" src="webpage/giomaria.jpg" alt="Gio and Maria">
   <img class="" src="webpage/ae.png" alt="Abby and Esther">
