--- a/index1.html
+++ b/index1.html
@@ -67,7 +67,7 @@ href= "index1style.css" />
   <img class="" src="webpage/marco.JPG" alt="Marco">
   <img class="" src="webpage/mm.PNG" alt="Mayra and Marco">
   <img class="" src="webpage/jorge.jpg" alt="Jorge">
-  <img class="" src="webpage/ASL.jpg" alt="ASL Class">
+  <img class="" src="webpage/asl.jpg" alt="ASL Class">
   <img class="" src="webpage/ffa.JPG" alt="FFA">
   <img class="" src="webpage/giomaria.jpg" alt="Gio and Maria">
   <img class="" src="webpage/ae.png" alt="Abby and Esther">
