--- a/index1.html
+++ b/index1.html
@@ -61,20 +61,20 @@ href= "index1style.css" />
 </aside>
  
 <div>
-  <img class="" src="webpage/ricardo.PNG" alt="Ricardo">
-  <img class="" src="webpage/paola.jpg" alt="Paola">
-  <img class="" src="webpage/priscilla.jpg" alt="Priscilla">
-  <img class="" src="webpage/marco.JPG" alt="Marco">
-  <img class="" src="webpage/mm.PNG" alt="Mayra and Marco">
-  <img class="" src="webpage/jorge.jpg" alt="Jorge">
-  <img class="" src="webpage/asl.jpg" alt="ASL Class">
-  <img class="" src="webpage/ffa.JPG" alt="FFA">
-  <img class="" src="webpage/giomaria.jpg" alt="Gio and Maria">
-  <img class="" src="webpage/ae.png" alt="Abby and Esther">
-  <img class="" src="webpage/sarah.jpg" alt="Sarah">
-  <img class="" src="webpage/estherjpg" alt="Esther">
-  <img class="" src="webpage/quince.PNG" alt="Quince">
-  <img class="" src="webpage/4thgrade.png" alt="4th Grade">
+  <img class="image" src="webpage/ricardo.PNG" alt="Ricardo">
+  <img class="image" src="webpage/paola.jpg" alt="Paola">
+  <img class="image" src="webpage/priscilla.jpg" alt="Priscilla">
+  <img class="image" src="webpage/marco.JPG" alt="Marco">
+  <img class="image" src="webpage/mm.PNG" alt="Mayra and Marco">
+  <img class="image" src="webpage/jorge.jpg" alt="Jorge">
+  <img class="image" src="webpage/asl.jpg" alt="ASL Class">
+  <img class="image" src="webpage/ffa.JPG" alt="FFA">
+  <img class="image" src="webpage/giomaria.jpg" alt="Gio and Maria">
+  <img class="image" src="webpage/ae.png" alt="Abby and Esther">
+  <img class="image" src="webpage/sarah.jpg" alt="Sarah">
+  <img class="image" src="webpage/estherjpg" alt="Esther">
+  <img class="image" src="webpage/quince.PNG" alt="Quince">
+  <img class="image" src="webpage/4thgrade.png" alt="4th Grade">
 </div>  
   
   <footer>
