--- a/index1.html
+++ b/index1.html
@@ -72,7 +72,7 @@ href= "index1style.css" />
   <img class="image" src="webpage/giomaria.jpg" alt="Gio and Maria">
   <img class="image" src="webpage/ae.png" alt="Abby and Esther">
   <img class="image" src="webpage/sarah.jpg" alt="Sarah">
-  <img class="image" src="webpage/estherjpg" alt="Esther">
+  <img class="image" src="webpage/esther.jpg" alt="Esther">
   <img class="image" src="webpage/quince.PNG" alt="Quince">
   <img class="image" src="webpage/4thgrade.png" alt="4th Grade">
 </div>  
