--- a/index1.html
+++ b/index1.html
@@ -57,12 +57,17 @@ href= "index1style.css" />
   <h2>Movie</h2>
   <p class="about">Having to pick a movie that I can say I will never get tired of is difficult. I guess I would say, yeah, <em>The 
     Outsiders</em>.</p>
+  <h2>Show</h2>
+  <p class="about">I am sorry, but I cannot answer that if you expect a single favorite show. I have a ton and I can't list them from my
+    top favorite to just plain favorite. So in no particular order: <em>Three's Company, I Love Lucy, Newhart, Cybill, Criminal Minds,
+    Everybody Loves Raymond, Monk </em>and <em></em>.</p>
   
 </aside>
  
 <div>
   <img class="image" src="webpage/ricardo.PNG" alt="Ricardo">
   <img class="image" src="webpage/paola.jpg" alt="Paola">
+  <img class="image" src="webpage/ben.JPG" alt="Ben">
   <img class="image" src="webpage/priscilla.jpg" alt="Priscilla">
   <img class="image" src="webpage/marco.JPG" alt="Marco">
   <img class="image" src="webpage/mm.PNG" alt="Mayra and Marco">
