--- a/finalproject.html
+++ b/finalproject.html
@@ -30,9 +30,9 @@ href= "finalprojectstyle.css" />
 
 <p class="main">The course that I am taking, allowing me to gain more knowledge about computers, is called (perhaps obvious)
   Exploring Computer Science within Covina High School. In this class, I have excelled my knowlege with how computers work, the
-  components that make them work, how they read information. With that, I know I will be able to be more informed about this 
+  components that make them work, and how they read information. With that, I know I will be able to be more informed about this 
   form of advancement in technology throughout the rest of the my senior year in high school. I decided to join this class 
-  because I thought it would be interesting to leanr something different aside from typical things that schools would have to 
+  because I thought it would be interesting to learn something different aside from typical things that schools would have to 
   offer such as art or math and such. The things I expected to get out of this class was a better handling of computers and how 
   to be able to fix them if an issue were to ever occur with them.</p>
 
@@ -47,7 +47,7 @@ href= "finalprojectstyle.css" />
     classes together, but I would still see him around. My 3rd period class was peer tutoring, and for the first 3 days the peer tutors
     sat in the library without a thing to do. So I dropped the class and that messed with my schedule. I wanted to keep my old schedule,
     but I had to find a class to fill in for 3rd. I asked around and hardly got any persuasive ideas. Then I asked Andrew and he 
-    informed me about the STEM class that I honeslty did not know this school offered. He told me that I I should join and he would make 
+    informed me about the STEM class that I, honeslty, did not know this school offered. He told me that I should join and he would make 
     sure I pass the class. And with that, I found myself in the counselor's room asking for this class to fill for my 3rd period.</p>
  </aside> 
   
