--- a/index1.html
+++ b/index1.html
@@ -29,8 +29,8 @@ href= "index1style.css" />
 <h1>About Me</h1>
 
 <p class="about">A senior in high school and still find myself to be struggling with my usage of my time. I tend to procrastinate on 
-  many things, but when it comes time to complete them, I try to complete it in a decent quality. I can be very friendly, respectful,
-  and sociable, as long as I am treated in the same fashion. </p>
+  many things, but when it comes time to complete them, I try to complete it in a decent quality, at least. I can be very friendly, 
+  respectful, and sociable- as long as I am treated in the same fashion. </p>
 
   </main>
   
@@ -40,29 +40,33 @@ href= "index1style.css" />
   <h2>Color</h2>
   <p class="about">Black</p>
   <h2>Animal</h2>
-  <p class="about">Penguin- Not only are they cute and cuddley, but they also happen to be very persistent with strong instincts. 
-    They also nurute their young, which is their priority.</p>
+  <p class="about">Penguin- Not only are they cute and cuddley, but they also happen to be very persistent and have strong instincts. 
+    They also nurture their young, which is their priority.</p>
   <h2>Music</h2>
-  <p class="about">The type of music I listen to is hard rock, metal, and 2000s R%B. Any other form of mainstream has to be mostly before
+  <p class="about">The type of music I listen to is hard rock, metal, and 2000s R&B. Any other form of mainstream has to be mostly before
   2013. I am not a fan of today's music. No creativity or meaning.</p>
   <h2>Drink</h2>
   <p class="about">Orange Soda</p>
   <h2>Snack</h2>
-  <p class="about"> I have strong passion for Hot Cheetos.</p>
+  <p class="about"> I have a strong passion for Hot Cheetos.</p>
   <h2>Food</h2>
   <p class="about">Spaghetti. Mmm, spaghetti.</p>
   <h2>Book</h2>
-  <p class="about"> I love <em>The Outsiders</em> by <cite>S.E. Hinton</cite>. I read the book 11 times and watched the movie, like, 9.
-  </p>
+  <p class="about"> I love <em>The Outsiders</em> by <cite>S.E. Hinton</cite>. I read the book 11 times and watched the movie, like, 9
+    times.</p>
   <h2>Movie</h2>
   <p class="about">Having to pick a movie that I can say I will never get tired of is difficult. I guess I would say, yeah, <em>The 
     Outsiders</em>.</p>
   <h2>Show</h2>
   <p class="about">I am sorry, but I cannot answer that if you expect a single favorite show. I have a ton and I can't list them from my
     top favorite to just plain favorite. So in no particular order: <em>Three's Company, I Love Lucy, Newhart, Cybill, Criminal Minds,
-    Everybody Loves Raymond, Monk </em>and <em></em>.</p>
+    Everybody Loves Raymond</em>, and <em>Monk</em>.</p>
   
 </aside>
+  
+  <div>
+    <img class="music" src="" alt="">
+  </div>
  
 <div>
   <img class="image" src="webpage/ricardo.PNG" alt="Ricardo">
